src/tests/snapshots/parse__parse error.snap
---
source: src/tests/parse.rs
expression: err
---
Parse error: TS1005
 --> <anon>:1:7
  |
1 | var ab-cd = 1;
  |       ^


